demo/13.K8s/web_app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  labels:
    app: apache
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: php-apache
        image: eboraas/apache-php
        ports:
        - containerPort: 80
        volumeMounts:
        - name: persistent-storage
          mountPath: "/var/www/html"
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: app01-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    run: web-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: apache
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-sa
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: myminikube.plu
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service
          servicePort: 80
